update code.js to main.js

--- a/index.html
+++ b/index.html
@@ -61,6 +61,6 @@
 
         <p class="footer">Developed with 🧡 by Andrés López</p>
     </div>
-    <script src="./assets/js/code.js"></script>
+    <script src="./assets/js/main.js"></script>
 </body>
 </html>
